add relevant document retriever

--- a/vector-db/test_weaviate.ipynb
+++ b/vector-db/test_weaviate.ipynb
@@ -2,27 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\aloys\\AppData\\Local\\Temp\\ipykernel_42768\\815967896.py:6: ResourceWarning: unclosed <socket.socket fd=1852, family=AddressFamily.AF_INET6, type=SocketKind.SOCK_STREAM, proto=0, laddr=('::1', 64369, 0, 0), raddr=('::1', 8080, 0, 0)>\n",
-      "  weaviate_client = weaviate.connect_to_local()\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
+    "from dotenv import dotenv_values\n",
+    "env = dotenv_values()\n",
     "\n",
     "import weaviate\n",
     "import weaviate.classes as wvc\n",
     "import os\n",
     "import json\n",
     "\n",
-    "weaviate_client = weaviate.connect_to_local()\n",
+    "wv_headers = {\n",
+    "    \"X-OpenAI-Api-key\": env[\"OPENAI_API_KEY\"]\n",
+    "}\n",
+    "weaviate_client = weaviate.connect_to_local(headers=wv_headers)\n",
     "with open(\"schema.json\", \"r\") as f:\n",
     "    schemas = json.loads(f.read())\n",
     "    \n",
@@ -30,8 +26,95 @@
     "for schema in schemas[\"classes\"]: \n",
     "    try:\n",
     "        weaviate_client.collections.create_from_dict(schema)\n",
-    "    except:\n",
+    "    except Exception as error:\n",
     "        print(f\"Failed to create {schema['class']}\")\n",
+    "        print(error)\n",
+    "weaviate_client.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import os\n",
+    "import json\n",
+    "from dotenv import dotenv_values\n",
+    "env = dotenv_values()\n",
+    "\n",
+    "import weaviate\n",
+    "import weaviate.classes as wvc\n",
+    "from typing import List, Dict\n",
+    "from langchain_community.document_loaders.text import TextLoader\n",
+    "from langchain_community.document_loaders.directory import DirectoryLoader\n",
+    "from langchain_text_splitters import MarkdownHeaderTextSplitter, MarkdownTextSplitter\n",
+    "from langchain.docstore.document import Document\n",
+    "\n",
+    "headers_to_split_on = [\n",
+    "    (\"#\", \"Header 1\"),\n",
+    "    (\"##\", \"Header 2\"),\n",
+    "    (\"###\", \"Header 3\"),\n",
+    "    (\"####\", \"Header 4\"),\n",
+    "    (\"#####\", \"Header 5\"),\n",
+    "    (\"######\", \"Header 6\"),\n",
+    "]\n",
+    "\n",
+    "def source_title_parser(source: str) -> str:\n",
+    "    return os.path.splitext(os.path.basename(source))[0]\n",
+    "\n",
+    "def mdhsplitter_reformatter(doc: Document) -> str:\n",
+    "    headers = {k: v for v, k in headers_to_split_on}\n",
+    "    text = doc.page_content\n",
+    "    for header, v in headers.items():\n",
+    "        if header not in doc.metadata.keys():\n",
+    "            continue\n",
+    "        text = f\"{v} {doc.metadata[header]}\\n\" + text\n",
+    "\n",
+    "    return text\n",
+    "\n",
+    "dir_loader = DirectoryLoader(\n",
+    "    path=os.path.join(\"data/content\"),\n",
+    "    loader_cls=TextLoader,\n",
+    ")\n",
+    "mdhsplitter = MarkdownHeaderTextSplitter(\n",
+    "    headers_to_split_on=headers_to_split_on\n",
+    "    # strip_headers=False,\n",
+    ")\n",
+    "\n",
+    "wv_headers = {\n",
+    "    \"X-OpenAI-Api-key\": env[\"OPENAI_API_KEY\"]\n",
+    "}\n",
+    "weaviate_client = weaviate.connect_to_local(headers=wv_headers)\n",
+    "collection = weaviate_client.collections.get(\"scheme_chunks\")\n",
+    "\n",
+    "docs = dir_loader.load()\n",
+    "\n",
+    "with collection.batch.dynamic() as batch:\n",
+    "    for doc in docs:\n",
+    "        doc_chunks: List[Document] = mdhsplitter.split_text(doc.page_content)\n",
+    "        title = source_title_parser(doc.metadata[\"source\"])\n",
+    "        for chunk in doc_chunks:\n",
+    "            text: str = mdhsplitter_reformatter(chunk)\n",
+    "            batch.add_object(\n",
+    "                properties={\n",
+    "                    \"content_chunks\": text,\n",
+    "                    \"title\": title,\n",
+    "                    \"source\": doc.metadata[\"source\"],\n",
+    "                }\n",
+    "            )\n",
+    "\n",
+    "collection = weaviate_client.collections.get(\"whole_scheme\")\n",
+    "with collection.batch.dynamic() as batch:\n",
+    "    for doc in docs:\n",
+    "        batch.add_object(\n",
+    "            properties={\n",
+    "                \"content\": doc.page_content,\n",
+    "                \"title\": source_title_parser(doc.metadata[\"source\"]),\n",
+    "                \"source\": doc.metadata[\"source\"],\n",
+    "            }\n",
+    "        )\n",
     "weaviate_client.close()\n"
    ]
   },
@@ -121,66 +204,6 @@
     "results = weaviate_client.schema.get()\n",
     "\n",
     "print(len(results[\"classes\"]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from typing import List, Dict\n",
-    "from langchain_community.document_loaders.text import TextLoader\n",
-    "from langchain_community.document_loaders.directory import DirectoryLoader\n",
-    "from langchain_text_splitters import MarkdownHeaderTextSplitter, MarkdownTextSplitter\n",
-    "from langchain.docstore.document import Document\n",
-    "\n",
-    "def source_title_parser(source: str) -> str:\n",
-    "    return os.path.splitext(os.path.basename(source))[0]\n",
-    "\n",
-    "def mdhsplitter_reformatter(doc: Document) -> str:\n",
-    "    headers = {\n",
-    "        \"Header 3\": \"###\",\n",
-    "        \"Header 2\": \"##\",\n",
-    "        \"Header 1\": \"#\",\n",
-    "    }\n",
-    "    text = doc.page_content\n",
-    "    for header, v in headers.items():\n",
-    "        if header not in doc.metadata.keys():\n",
-    "            continue\n",
-    "        text = f\"{v} {doc.metadata[header]}\\n\" + text\n",
-    "\n",
-    "    return text\n",
-    "\n",
-    "dir_loader = DirectoryLoader(\n",
-    "    path=os.path.join(\"data\"),\n",
-    "    loader_cls=TextLoader,\n",
-    ")\n",
-    "mdhsplitter = MarkdownHeaderTextSplitter(\n",
-    "    headers_to_split_on=[\n",
-    "        (\"#\", \"Header 1\"),\n",
-    "        (\"##\", \"Header 2\"),\n",
-    "        (\"###\", \"Header 3\"),\n",
-    "    ],\n",
-    "    # strip_headers=False,\n",
-    ")\n",
-    "\n",
-    "collection = weaviate_client.collections.get(\"Schemes\")\n",
-    "\n",
-    "with collection.batch.dynamic() as batch:\n",
-    "    for doc in dir_loader.load():\n",
-    "        doc_chunks: List[Document] = mdhsplitter.split_text(doc.page_content)\n",
-    "        title = source_title_parser(doc.metadata[\"source\"])\n",
-    "        for chunk in doc_chunks:\n",
-    "            text: str = mdhsplitter_reformatter(chunk)\n",
-    "            batch.add_object(\n",
-    "                properties={\n",
-    "                    \"content_chunks\": text,\n",
-    "                    \"title\": title,\n",
-    "                    \"source\": doc.metadata[\"source\"],\n",
-    "                }\n",
-    "            )\n"
    ]
   }
  ],
