update to cloud vecdb

--- a/vector-db/test_weaviate.ipynb
+++ b/vector-db/test_weaviate.ipynb
@@ -18,7 +18,11 @@
     "wv_headers = {\n",
     "    \"X-OpenAI-Api-key\": env[\"OPENAI_API_KEY\"]\n",
     "}\n",
-    "weaviate_client = weaviate.connect_to_local(headers=wv_headers)\n",
+    "weaviate_client = weaviate.connect_to_wcs(\n",
+    "    cluster_url=env[\"WEAVIATE_URL\"],\n",
+    "    auth_credentials=weaviate.auth.AuthApiKey(env[\"WEAVIATE_API_KEY\"]),\n",
+    "    headers=wv_headers,\n",
+    ")\n",
     "with open(\"schema.json\", \"r\") as f:\n",
     "    schemas = json.loads(f.read())\n",
     "    \n",
@@ -34,9 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\aloys\\Documents\\Github\\GovGuide\\venv\\lib\\site-packages\\weaviate\\warnings.py:219: UserWarning: Bat003: The dynamic batch-size could not be refreshed successfully with error RemoteProtocolError('Server disconnected without sending a response.')\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import os\n",
@@ -86,7 +99,11 @@
     "wv_headers = {\n",
     "    \"X-OpenAI-Api-key\": env[\"OPENAI_API_KEY\"]\n",
     "}\n",
-    "weaviate_client = weaviate.connect_to_local(headers=wv_headers)\n",
+    "weaviate_client = weaviate.connect_to_wcs(\n",
+    "    cluster_url=env[\"WEAVIATE_URL\"],\n",
+    "    auth_credentials=weaviate.auth.AuthApiKey(env[\"WEAVIATE_API_KEY\"]),\n",
+    "    headers=wv_headers,\n",
+    ")\n",
     "collection = weaviate_client.collections.get(\"scheme_chunks\")\n",
     "\n",
     "docs = dir_loader.load()\n",
